bk_ida/gccida/g3/make_tree
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4509:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v5; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4510:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v6; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4511:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v7; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4514:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v10; // r12 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4516:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *tree; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4517:5: error: expected ';' after expression
tree v14; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4517:6: error: use of undeclared identifier 'v14'
tree v14; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4518:5: error: expected ';' after expression
tree v15; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4518:6: error: use of undeclared identifier 'v15'
tree v15; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4521:5: error: expected ';' after expression
tree v18; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4521:6: error: use of undeclared identifier 'v18'
tree v18; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4522:5: error: expected ';' after expression
tree v19; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4522:6: error: use of undeclared identifier 'v19'
tree v19; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4525:5: error: expected ';' after expression
tree v22; // rax 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4525:6: error: use of undeclared identifier 'v22'
tree v22; // rax 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4528:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v25; // rax 
^
union 
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4529:5: error: expected ';' after expression
tree v26; // r12 
    ^
    ;
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4529:6: error: use of undeclared identifier 'v26'
tree v26; // r12 
     ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/expmed.c:4530:1: error: must use 'union' tag to refer to type 'tree_node'
tree_node *v27; // rax 
^
union 
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/make_tree/src/obj/expmed.o] Error 1
